--- a/package.json
+++ b/package.json
@@ -25,5 +25,11 @@
     "lite-server": "^2.5.4",
     "mongoose": "^5.5.15",
     "morgan": "^1.9.1"
+  },
+  "devDependencies": {
+    "babel-loader": "^8.1.0",
+    "webpack": "^5.1.3",
+    "webpack-cli": "^4.1.0",
+    "webpack-pwa-manifest": "^4.2.0"
   }
 }
